--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </main>
         <footer>
             <div class="social-media">
-                <img src="./Group 6.png" alt="Social media"> 
+                <img class="icons" src="./Group 6.png" alt="Social media"> 
             </div>
         </footer>
     </div>
